# Bookmark-Organizer-Pro

./: .gitattributes  .gitignore  AUTONOMOUS-LOOP-STATE.md  CHANGELOG.md  CLAUDE.md  COMPLETED.md  Domains.txt  LOGO_PROMPTS.md  README.md  RESEARCH.md  RESEARCH_FEATURE_PLAN.md  RESEARCH_FEATURE_PLAN_2026-06-05.md  ROADMAP.md  Roadmap_Blocked.md  bookmark_organizer.spec  bookmark_organizer_pro_v4.py  build_unix.sh  build_windows.bat  domain-lists.txt  forums-communities-domains.txt  government-legal-domains.txt  main.py  pylock.toml  pyproject.toml  requirements.txt  version_info.txt
.github/workflows/: build.yml  ci.yml
benchmarks/: bench_core.py
bookmark_organizer_pro/: __init__.py  ai.py  app.py  cli.py  commands.py  constants.py  desktop_bootstrap.py  i18n.py  importers.py  importers_extra.py  launcher.py  link_checker.py  logging_config.py  mcp_server.py  release_contract.py  search.py  theme_runtime.py  url_utils.py
bookmark_organizer_pro/app_mixins/: __init__.py  ai_actions.py  ai_categorization.py  ai_enrichment.py  ai_menu_data.py  ai_processing.py  ai_settings.py  ai_support.py  ai_titles.py  app_shell.py  bookmark_crud.py  bookmarks.py  categories.py  command_palette.py  dashboard.py  filters.py  import_export.py  lifecycle.py  selection.py  themes.py  tools.py  zoom.py
bookmark_organizer_pro/core/: __init__.py  category_manager.py  default_categories.json  default_categories.py  pattern_engine.py  sqlite_storage.py  storage_manager.py
bookmark_organizer_pro/io_formats/: __init__.py  xbel.py
bookmark_organizer_pro/managers/: __init__.py  bookmarks.py  tags.py
bookmark_organizer_pro/models/: __init__.py  bookmark.py  category.py  tag.py
bookmark_organizer_pro/services/: __init__.py  ai_audit_log.py  ai_snapshot.py  ai_tools.py  api.py  atomic_document_store.py  auto_snapshot.py  bookmark_graph.py  category_delete_recovery.py  citation_summarizer.py  dead_link_scanner.py  digest.py  dup_hybrid.py  egress.py  embeddings.py  encryption.py  epub_export.py  extraction_templates.py  favicons.py  feed_export.py  flows.py  hybrid_search.py  icons.py  import_sessions.py  ingest.py  job_ledger.py  local_state.py  mcp_auth.py  migration.py  nl_query.py  obsidian_export.py  ollama_manager.py  organization.py  private_files.py  rag_chat.py  read_later.py  reader_annotations.py  recovery_bundle.py  recovery_workflow.py  rss_feeds.py  (+10 more)
bookmark_organizer_pro/ui/: __init__.py  about.py  bookmark_workflows.py  cleanup_review.py  components.py  density.py  dependencies.py  drag_drop.py  feedback.py  foundation.py  graph_view.py  import_center.py  infrastructure.py  live_workflow.py  management_dialogs.py  navigation.py  quick_add.py  read_later_queue.py  reader_view.py  reports.py  shell_widgets.py  (+27 more)
browser-extension/: background.js  categories.json  credential-vault.js  i18n.js  manifest.firefox.json  manifest.json  options.html  options.js  popup.css  popup.html  popup.js  shared.js  sidepanel.html  sidepanel.js
docs/: ARCHITECTURE.md  COMPETITIVE_RESEARCH.md  REPOSITORY_STRUCTURE.md
locale/: README.md  bop.pot
packaging/: bookmark_organizer.spec  nuitka_build.py  nuitka_smoke.py  product_claims.json  release_manifest.json  runtime_hook_multiprocessing.py  version_info.txt
scripts/: accessibility_contract_smoke.py  add_tranco_top5000.py  add_user_domains.py  build_extension.py  build_release.py  build_unix.sh  build_windows.bat  clean_workspace.py  dependency_vulnerability_audit.py  extension_e2e_smoke.py  extension_firefox_smoke.py  generate_bookmarklet.py  package_contract_audit.py  release_artifact_smoke.py  visual_regression_smoke.py
tests/: test_accessibility_contracts.py  test_ai_audit.py  test_ai_clients.py  test_ai_streaming.py  test_annotation_migration.py  test_atomic_document_store.py  test_backup.py  test_browser_extension.py  test_cli.py  test_cli_contract.py  test_core.py  test_dependency_vulnerability_audit.py  test_diagnostics.py  test_dialog_geometry.py  test_egress.py  test_embedding_chunk_contract.py  test_extension_e2e_smoke.py  test_extension_pairing_contract.py  test_favicon_security.py  test_hardening.py  test_i18n.py  test_import_sessions.py  test_integration.py  test_job_ledger.py  test_maintenance_flows.py  test_mcp_tools.py  test_mhtml_acceptance.py  test_package_manifest_acceptance.py  test_packaging.py  test_recovery_bundle.py  test_recovery_workflows.py  test_release_artifact_smoke.py  test_rss_feed_contract.py  test_services.py  test_smart_collection_contract.py  test_snapshot_history.py  test_storage_coordination.py  test_theme_contrast_acceptance.py  test_v62_services.py  test_visual_regression_smoke.py
(+45 files in other folders)
