[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bookmark-organizer-pro"
version = "6.12.0"
description = "Professional bookmark manager with AI categorization, semantic search, MCP server, and HTML snapshots"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12",
    "requests>=2.34.2",
    "idna>=3.15.0",
    "Pillow>=12.3.0",
    "defusedxml>=0.7",
    "tksheet>=7.6,<8",
    "urllib3>=2.7.0",
    "lxml>=6.1.1",
    "lz4>=4.4.5,<5",
    "regex>=2024.11.6",
]

[project.optional-dependencies]
ai = [
    "trafilatura>=2.1",
    "lingua-language-detector>=2.0",
    "fastembed>=0.4,<1.0",
    "lancedb>=0.13,<1.0",
]
encryption = ["cryptography>=49.0.0"]
mcp = ["mcp>=1.28,<2.0", "fastmcp>=3.4.1,<4.0"]
nuitka = ["Nuitka>=4.1,<5.0"]
sunvalley = ["sv-ttk>=2.6.1,<3.0"]
themedetect = ["darkdetect>=0.8"]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "playwright>=1.50",
    "pip-audit>=2.10.1",
    "pyinstaller>=6.20",
    "jaraco.text>=4.0",
]
all = [
    "bookmark-organizer-pro[ai,encryption,mcp,sunvalley,themedetect]",
]

[project.scripts]
bop = "bookmark_organizer_pro.cli:main"
bop-mcp = "bookmark_organizer_pro.mcp_server:main"

[tool.setuptools.packages.find]
include = ["bookmark_organizer_pro*"]

[tool.setuptools.package-data]
# Ship bundled data assets (e.g. the default category patterns) with the wheel.
bookmark_organizer_pro = ["**/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.ruff]
target-version = "py310"
line-length = 120
# Large existing GUI codebase — lint for real correctness problems, not style.
extend-exclude = ["build", "dist", "packaging"]

[tool.ruff.lint]
select = ["F", "E9"]

[tool.ruff.lint.per-file-ignores]
# Forward-reference type hints under `from __future__ import annotations`
# (organization.py) and a dynamically-injected global (mcp_server.py) are not
# runtime-undefined; ruff can't see that, so exempt those files from F821.
"bookmark_organizer_pro/services/organization.py" = ["F821"]
"bookmark_organizer_pro/mcp_server.py" = ["F821"]
"tests/*" = ["F841", "B011"]
